--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,25 @@
     android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/bg_cloud" />
+
+   <io.alterac.blurkit.BlurLayout
+       android:id="@+id/blurLayout"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       app:blk_blurRadius="20"
+       app:blk_downscaleFactor="0.12">
+
+   </io.alterac.blurkit.BlurLayout>
+
+
+
     <TextView
         android:id="@+id/textViewCityName"
         android:layout_width="wrap_content"
@@ -17,6 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gps" />
+
 
     <TextView
         android:id="@+id/textViewWeatherDescription"
