--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg_cloud" />
+        android:src="@drawable/bg_white" />
 
     <io.alterac.blurkit.BlurLayout
         android:id="@+id/blurLayout"
@@ -68,6 +68,7 @@
         android:layout_marginEnd="16dp"
         android:autoLink="email"
         android:text="info@alirezamehri.ir"
+        android:textColorLink="#5E5E5E"
         android:textSize="@dimen/_16sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
@@ -81,6 +82,7 @@
         android:layout_marginEnd="16dp"
         android:autoLink="web"
         android:text="www.alirezamehri.ir"
+        android:textColorLink="#5E5E5E"
         android:textSize="@dimen/_16sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView13"
@@ -103,7 +105,6 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:layout_marginBottom="32dp"
         android:text="Developed by Alireza Mehri"
         android:textSize="@dimen/_12sdp"
